Add description field

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
     "author": "Jacob Lin",
+    "description": "A freeCodeCamp learn npm package project that does something awesome",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
